resizing logic added

--- a/notebooks/dataset.ipynb
+++ b/notebooks/dataset.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +81,7 @@
      "text": [
       "torch.Size([5, 3, 360, 640])\n",
       "torch.Size([1, 5, 3, 360, 640])\n",
-      "torch.Size([1, 3, 5, 360, 640])\n",
-      "torch.Size([1, 2, 16, 45, 80]) torch.Size([1, 5, 128, 4, 4])\n"
+      "torch.Size([1, 2, 16, 64, 64]) torch.Size([1, 5, 128, 4, 4])\n"
      ]
     }
    ],
@@ -92,7 +91,8 @@
     "pair.cuda()\n",
     "\n",
     "print(d.shape)\n",
-    "mean_wan, mean_dcae = pair(pair.preprocess(d.unsqueeze(0).cuda()))\n",
+    "x_wan, x_dcae = pair.preprocess(d.unsqueeze(0).float().cuda())\n",
+    "mean_wan, mean_dcae = pair(x_wan, x_dcae)\n",
     "print(mean_wan.shape, mean_dcae.shape)"
    ]
   },
