serialization seems to work but dataset looks like consisting of suffled frames

--- a/notebooks/dataset.ipynb
+++ b/notebooks/dataset.ipynb
@@ -98,22 +98,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tar buffer size: 552960 bytes (0.53 MB)\n",
+      "Tensors saved to ../../data/pair.tar\n"
+     ]
     }
    ],
    "source": [
-    "pair.dcae.training"
+    "import tarfile\n",
+    "import io\n",
+    "import os\n",
+    "\n",
+    "# Create data directory if it doesn't exist\n",
+    "os.makedirs('../../data', exist_ok=True)\n",
+    "\n",
+    "# Create tar file in memory\n",
+    "tar_buffer = io.BytesIO()\n",
+    "\n",
+    "with tarfile.open(fileobj=tar_buffer, mode='w') as tar:\n",
+    "    # Add mean_wan tensor\n",
+    "    wan_buffer = io.BytesIO()\n",
+    "    torch.save(mean_wan, wan_buffer)\n",
+    "    wan_buffer.seek(0)\n",
+    "    wan_info = tarfile.TarInfo(name='mean_wan.pt')\n",
+    "    wan_info.size = len(wan_buffer.getvalue())\n",
+    "    tar.addfile(wan_info, wan_buffer)\n",
+    "    \n",
+    "    # Add mean_dcae tensor\n",
+    "    dcae_buffer = io.BytesIO()\n",
+    "    torch.save(mean_dcae, dcae_buffer)\n",
+    "    dcae_buffer.seek(0)\n",
+    "    dcae_info = tarfile.TarInfo(name='mean_dcae.pt')\n",
+    "    dcae_info.size = len(dcae_buffer.getvalue())\n",
+    "    tar.addfile(dcae_info, dcae_buffer)\n",
+    "\n",
+    "# Print the size of the tar buffer\n",
+    "tar_buffer.seek(0)\n",
+    "tar_size = len(tar_buffer.getvalue())\n",
+    "print(f\"Tar buffer size: {tar_size} bytes ({tar_size / 1024 / 1024:.2f} MB)\")\n",
+    "\n",
+    "# Write the tar file to disk\n",
+    "tar_buffer.seek(0)\n",
+    "with open('../../../data/pair.tar', 'wb') as f:\n",
+    "    f.write(tar_buffer.getvalue())\n",
+    "\n",
+    "print(\"Tensors saved to ../../../data/pair.tar\")"
    ]
   }
  ],
