fixed video visualization and added an optional max_videos argument to avoid spending millions on s3 downloads

--- a/notebooks/test_mp4_s3.ipynb
+++ b/notebooks/test_mp4_s3.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "import glob\n",
     "\n",
-    "pt_files = glob.glob('/home/developer/workspace/data/pt/*.pt')\n",
+    "pt_files = glob.glob('/home/developer/workspace/data/pt_train_valid_test/*/*/*.pt')\n",
     "\n",
     "vids = [torch.load(pt_file) for pt_file in pt_files]"
    ]
@@ -33,7 +33,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test debug mode with snippet limit to get MP4 files along with tensors\n",
+    "from lat2lat.data.mp4_video_dataset import get_video_loader\n",
     "\n",
+    "print(\"Testing debug mode with snippet limit...\")\n",
+    "debug_loader = get_video_loader(\n",
+    "    batch_size=1,\n",
+    "    bucket_name='cod-yt-playlist',\n",
+    "    frames_per_sample=101,\n",
+    "    target_height=360,\n",
+    "    target_width=640,\n",
+    "    crop_duration=10.2,\n",
+    "    max_videos_queue=1,\n",
+    "    max_tensors_queue=10,\n",
+    "    max_videos=1    # Limit to 3 snippets for testing\n",
+    ")\n",
+    "\n",
+    "d = next(iter(debug_loader))\n",
+    "print(d.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from lat2lat.utils import create_video_visualization, export_video_as_gif\n",
     "from IPython.display import display, HTML\n",
     "\n",
@@ -42,7 +67,7 @@
     "\n",
     "# 1. Animated playback\n",
     "print(\"\\n1. Creating animated playback...\")\n",
-    "anim, video_np = create_video_visualization(vids[3][0].float()/255, \"Reconstructed Video Playback\")\n",
+    "anim, video_np = create_video_visualization(((d[0].float()/255)-0.5)*2, \"Reconstructed Video Playback\") # since i wrote the viz for AE output we need to normalize to [-1,1]\n",
     "display(HTML(anim.to_jshtml()))\n",
     "\n",
     "# 2. Export as GIF\n",
