--- a/notebooks/sanity_check_tar.ipynb
+++ b/notebooks/sanity_check_tar.ipynb
@@ -23,7 +23,7 @@
     "import io\n",
     "import torch\n",
     "\n",
-    "path = \"../../../data/pair.tar\"\n",
+    "path = \"/home/developer/workspace/data/vast/0000.tar\"\n",
     "\n",
     "def process_tensor_file(tar, base_name, suffix):\n",
     "    try:\n",
@@ -37,8 +37,8 @@
     "    return None\n",
     "\n",
     "with tarfile.open(path, 'r') as tar:\n",
-    "    mean_wan = process_tensor_file(tar, '0000', 'wan')\n",
-    "    mean_dcae = process_tensor_file(tar, '0000', 'dcae')\n",
+    "    mean_wan = process_tensor_file(tar, '0002', 'wan')\n",
+    "    mean_dcae = process_tensor_file(tar, '0002', 'dcae')\n",
     "\n",
     "print(mean_wan.shape, mean_dcae.shape)\n",
     "print(mean_wan.dtype, mean_dcae.dtype)\n",
@@ -52,12 +52,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_wan = False\n",
+    "check_wan = True\n",
     "from diffusers import AutoencoderKLWan\n",
     "from owl_vaes.configs import ResNetConfig\n",
     "from owl_vaes.models.dcae import DCAE\n",
     "import torch\n",
     "if check_wan:\n",
+    "    if len(mean_wan.shape) == 4:\n",
+    "        mean_wan = mean_wan.unsqueeze(0)\n",
+    "        print(mean_wan.shape)\n",
     "    vae = AutoencoderKLWan.from_pretrained(\n",
     "        \"Wan-AI/Wan2.1-VACE-14B-diffusers\",\n",
     "        subfolder=\"vae\",\n",
@@ -88,7 +91,18 @@
     "    vae.load_state_dict(torch.load(\"/home/developer/workspace/models/cod_128x.pt\"))\n",
     "    vae.encoder = None\n",
     "    vae.bfloat16().cuda()\n",
-    "    recon_vid = vae.decoder(mean_dcae[0].bfloat16().cuda())"
+    "    print(mean_dcae.shape)\n",
+    "    # Process in batches to avoid memory issues\n",
+    "    batch_size = 4\n",
+    "    recon_vid_list = []\n",
+    "    \n",
+    "    for i in range(0, mean_dcae.shape[0], batch_size):\n",
+    "        batch = mean_dcae[i:i+batch_size].bfloat16().cuda()\n",
+    "        with torch.no_grad():\n",
+    "            batch_recon = vae.decoder(batch)\n",
+    "        recon_vid_list.append(batch_recon.cpu())\n",
+    "    \n",
+    "    recon_vid = torch.cat(recon_vid_list, dim=0)"
    ]
   },
   {
